force-app/main/default/objects/ffr__XXXCreditNote__c/ffr__XXXCreditNote__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX Credit Note</label>
    <nameField>
        <displayFormat>XCRN{000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>