force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__Account__c.field-meta.xml
<CustomField>
    <fullName>ffr__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>