force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__CreditNoteCurrency__c.field-meta.xml
<CustomField>
    <fullName>ffr__CreditNoteCurrency__c</fullName>
    <label>Credit Note Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>