force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__CreditNoteDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__CreditNoteDate__c</fullName>
    <label>Credit Note Date</label>
    <type>Date</type>
</CustomField>