force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__CreditNoteDueDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__CreditNoteDueDate__c</fullName>
    <label>Credit Note Due Date</label>
    <type>Date</type>
</CustomField>