force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__CreditNoteTotal__c.field-meta.xml
<CustomField>
    <fullName>ffr__CreditNoteTotal__c</fullName>
    <label>Credit Note Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>