force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__gla__c.field-meta.xml
<CustomField>
    <fullName>ffr__gla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Ledger Account</label>
    <referenceTo>ffr__XXXGLA__c</referenceTo>
    <relationshipLabel>XXX Credit Note GLAs</relationshipLabel>
    <relationshipName>CreditNoteGLAs</relationshipName>
    <type>Lookup</type>
</CustomField>