force-app/main/default/objects/ffr__XXXCreditNote__c/fields/ffr__Period__c.field-meta.xml
<CustomField>
    <fullName>ffr__Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>ffr__XXXPeriod__c</referenceTo>
    <relationshipLabel>XXX Credit Note Periods</relationshipLabel>
    <relationshipName>CreditNotePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>